# yaml-validator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml  test.yaml
examples/: acquaintance.yaml  contacts.yaml  johnsmith.yaml  phonebook.yaml
examples/all-types/: customers.yaml  schema.yaml
examples/branching/: schema.yaml  usernames.yaml
examples/locating-errors/: README.md  phonebook.yaml  schema.yaml
examples/multiple-schemas/: README.md  mybook.yaml  person-schema.yaml  phonebook-schema.yaml
examples/nesting/: mybook.yaml  schema.yaml
examples/password/: schema.yaml
yaml-validator/: Cargo.toml  README.md
yaml-validator-cli/: Cargo.toml  README.md
yaml-validator-cli/examples/: acquaintance.yaml  janedoe.yaml  listofpeople.yaml  malfoy.yaml  peopleiknow.yaml  person.yaml  schema.yaml  schemauser.yaml
yaml-validator-cli/src/: error.rs  main.rs
yaml-validator/src/: breadcrumb.rs  error.rs  lib.rs  tests.rs  utils.rs
yaml-validator/src/errors/: mod.rs  schema.rs  validation.rs
yaml-validator/src/modifiers/: all_of.rs  any_of.rs  mod.rs  not.rs  one_of.rs
yaml-validator/src/types/: array.rs  bool.rs  hash.rs  integer.rs  mod.rs  object.rs  real.rs  reference.rs  string.rs
