[package]
name = "yaml-validator-cli"
version = "0.0.2"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2018"
description = "A command-line interface to the yaml-validator library"
repository = "https://github.com/MathiasPius/yaml-validator"
readme = "../README.md"
license = "MIT"
keywords = ["YAML", "validation", "schema"]

[dependencies]
yaml-validator = { "path" = "../yaml-validator", version = "0.0.3" }
structopt = "0.3.8"
serde_yaml = "0.8.11"