[package]
name = "yaml-validator-cli"
version = "0.1.0-beta.0"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2018"
description = "A command-line interface to the yaml-validator library"
repository = "https://github.com/MathiasPius/yaml-validator"
readme = "../README.md"
license = "MIT"
keywords = ["YAML", "validation", "schema"]

[dependencies]
yaml-validator = { "path" = "../yaml-validator", version = "0.1.0-beta.0" }
structopt = "0.3.9"