[package]
name = "yaml-validator"
version = "0.1.0"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2018"
description = "A library for validating YAML against YAML-defined schemas"
repository = "https://github.com/MathiasPius/yaml-validator"
readme = "README.md"
license = "MIT"
keywords = ["YAML", "validation", "schema"]

[dependencies]
yaml-rust = "0.4.4"
thiserror = "1.0.22"
regex = { "version" = "1.3.4", optional = true }
smallvec = { "version" = "1.2.0", optional = true }

[features]
default = ["regex", "smallvec"]