[package]
name = "yaml-validator"
version = "0.2.0"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2018"
description = "A library for validating YAML against YAML-defined schemas"
repository = "https://github.com/MathiasPius/yaml-validator"
readme = "README.md"
license = "MIT"
keywords = ["YAML", "validation", "schema"]

[dependencies]
yaml-rust = "0.4.5"
thiserror = "1.0.30"
regex = { "version" = "1.5.4", optional = true }
smallvec = { "version" = "1.8.0", optional = true }

[features]
default = ["regex", "smallvec"]